<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Butterflies</string>
    <string name="title_activity_maps">Map</string>

    <!-- title for items of action bar menu -->
    <string name="map_icon">map</string>
    <string name="tune_icon">tune</string>
    <string name="about_icon">about</string>

    <!-- name of tabs -->
    <string name="tab1">Papilio Linnaeus</string>
    <string name="tab2">Princeps Hübner</string>
    <string name="tab3">Chilasa Moore</string>
    <string name="tab4">Achillides Hübner</string>
    <string name="tab5">Heraclides Hübner</string>
    <string name="tab6">Pterourus Scopoli</string>
    <string name="tab7">Sinoprinceps Hancock</string>

    <!-- about program alert dialog -->
    <string name="about_program_category">About</string>
    <string name="ok_button">OK</string>
    <string name="app_bar_about_descript">app_bar_about_descript</string>
    <string name="about_icon_descript">icon_des_descript</string>
    <string name="description_button_title">Description</string>
    <string name="ecology_button_title">Ecology</string>

    <!-- settings -->
    <string name="appbar_scrolling_text">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="font_category">Text settings</string>

    <string name="font_size">Font size</string>
    <string name="font_size_summary">Select a font size</string>
    <string name="very_min_size">very small</string>
    <string name="min_size">small</string>
    <string name="middle_size">normal</string>
    <string name="big_size">big</string>
    <string name="very_big_size">very big</string>

    <string name="font_color">Font color</string>
    <string name="font_color_summary">Select a font color</string>
    <string name="black_color">black</string>
    <string name="gray_color">gray</string>
    <string name="brown_color">brown</string>
    <string name="blue_color">blue</string>
    <string name="green_color">green</string>

    <string name="program_information">Information</string>
    <string name="information_summary">Additional version information and resource sources</string>

    <string name="program_name">The name of the program</string>
    <string name="version_pref">Program version</string>

    <string name="additional_resources">Additional Resources</string>
    <string name="wiki_summary">Information taken from free resources of www.wikipedia.org</string>
    <string name="app_version">1.0</string>
    <string name="app_name_summary">Papilio butterflies of the world</string>

    <string name="app_description_title">Description</string>
    <string name="app_description_text">The application contains butterflies from the papilio family.\nEach butterfly has a photo, description and location on the world map.</string>

    <!-- card item -->
    <string name="image_description">butterfly_image</string>

    <!-- details activity-->
    <string name="details_image_description">detail_image</string>
</resources>
