...
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

        <!-- app:tabRippleColor="@android:color/transparent" - remove ripple effect -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tabBackground"
            app:tabBackground="@drawable/tab_selector"
            app:tabTextColor="@drawable/tab_selector"
            app:tabMode="scrollable"/>
...
