<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_about"
        android:title="@string/about_icon"
        android:icon="@drawable/icon_about"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_map"
        android:title="@string/map_icon"
        android:icon="@drawable/icon_map"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/action_settings"
        android:title="@string/tune_icon"
        android:icon="@drawable/icon_tune"
        app:showAsAction="ifRoom"/>
</menu>